ecmascript/parser/tests/test262-error-references/fail/f0ff9ff5dab859aa.js.stderr
error: Expected RParen
 --> $DIR/tests/test262-parser/fail/f0ff9ff5dab859aa.js:1:19
  |
1 | function f(a, ...b, c)
  |                   ^

